--- a/Mission2/wwwroot/htmlpage.html
+++ b/Mission2/wwwroot/htmlpage.html
@@ -5,6 +5,10 @@
     <title>Mission 2</title>
 </head>
 <body>
+
+    <h1>My Preferred Name? Why, it's Brennan Williams</h1>
+
+    <img src="img/PXL_20220102_073429945.jpg" />
     <p>Hello IS 413!</p>
 </body>
 </html>
