--- a/Mission2/wwwroot/index.html
+++ b/Mission2/wwwroot/index.html
@@ -73,12 +73,15 @@
 
         <div class=" d-flex justify-content-center flex-column bg-danger p-5 m-3 rounded-3">
             <div class=" d-flex justify-content-center">
-                <p>Final Grade Numerical</p>
+                <p>Final Grade Numerical:    </p>
+                <br />
+
                 <p id="finalGradeNum"></p>
             </div>
 
             <div class=" d-flex justify-content-center">
-                <p>Final Grade Letter
+                <p>Final Grade Letter:   </p>
+                <br />
                 <p id="finalGradeLetter"></p>
             </div>
 
